--- a/extension/popup.html
+++ b/extension/popup.html
@@ -2,35 +2,132 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <style>
+    body {
+      width: 320px;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f8f9fa;
+      margin: 0;
+      padding: 15px;
+    }
+
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
+
+    h1 {
+      margin: 0 0 10px 0;
+      color: #2c3e50;
+      font-size: 20px;
+    }
+
+    .status-box {
+      width: 100%;
+      padding: 20px;
+      border-radius: 8px;
+      margin-bottom: 15px;
+      background-color: #fff;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      transition: all 0.3s ease;
+    }
+
+    .status-icon {
+      font-size: 40px;
+      margin-bottom: 10px;
+      display: block;
+    }
+
+    .status-text {
+      font-weight: bold;
+      font-size: 18px;
+      display: block;
+      margin-bottom: 5px;
+    }
+
+    .score {
+      font-size: 12px;
+      color: #666;
+    }
+
+    button {
+      background-color: #007bff;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 14px;
+      width: 100%;
+      transition: background-color 0.2s;
+    }
+
+    button:hover {
+      background-color: #0056b3;
+    }
+
+    button:disabled {
+      background-color: #ccc;
+      cursor: not-allowed;
+    }
+
+    #error-msg {
+      color: red;
+      font-size: 12px;
+      margin-top: 10px;
+      display: none;
+    }
+
+    /* Status Classes */
+    .safe {
+      background-color: #d4edda;
+      border: 1px solid #c3e6cb;
+    }
+
+    .safe .status-text {
+      color: #155724;
+    }
+
+    .suspicious {
+      background-color: #fff3cd;
+      border: 1px solid #ffeeba;
+    }
+
+    .suspicious .status-text {
+      color: #856404;
+    }
+
+    .phishing {
+      background-color: #f8d7da;
+      border: 1px solid #f5c6cb;
+    }
+
+    .phishing .status-text {
+      color: #721c24;
+    }
+  </style>
 </head>
 
 <body>
-    <h3>🛡️ ShieldX Scanner</h3>
+  <div class="container">
+    <h1>🛡️ ShieldX Detector</h1>
 
-    <div class="container">
-        <button id="scanBtn">Scan Current Page</button>
-
-        <div id="result" class="result-box" style="display:none;"></div>
-
-        <div class="toggle-container">
-            <span>Auto-Scan Pages</span>
-            <label class="switch">
-                <input type="checkbox" id="autoScanToggle">
-                <span class="slider"></span>
-            </label>
-        </div>
-
-        <button id="settingsBtn">⚙️ Settings</button>
-
-        <div id="settingsPanel" class="input-group">
-            <label for="apiUrl">API URL:</label>
-            <input type="text" id="apiUrl" placeholder="https://your-app.azurewebsites.net">
-            <button id="saveBtn">Save</button>
-        </div>
+    <div id="result-area" class="status-box">
+      <span class="status-icon">🔍</span>
+      <span class="status-text">Ready to Scan</span>
+      <span id="score-text" class="score">Click Scan to check this page</span>
     </div>
 
-    <script src="popup.js"></script>
+    <button id="scan-btn">Scan Current Page</button>
+    <p id="current-url"
+      style="font-size: 10px; color: #888; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; max-width: 100%; display:none;">
+    </p>
+    <div id="error-msg"></div>
+  </div>
+  <script src="popup.js"></script>
 </body>
 
 </html>
